--- a/requirements.txt
+++ b/requirements.txt
@@ -1,55 +1,43 @@
 # Core Flask dependencies
-Flask==3.0.0
-Flask-CORS==4.0.0
-Werkzeug==3.0.1
+Flask>=2.3.0
+Flask-CORS>=4.0.0
+Werkzeug>=2.3.0
 
 # Environment and configuration
-python-dotenv==1.0.0
+python-dotenv>=1.0.0
 
 # HTTP requests
-requests==2.31.0
+requests>=2.31.0
 
 # Data processing and ML
-numpy==1.24.3
-pandas==2.0.3
-scikit-learn==1.3.0
+numpy>=1.21.0
+pandas>=1.5.0
+scikit-learn>=1.2.0
 
 # Google AI
-google-generativeai==0.3.2
+google-generativeai>=0.3.0
 
 # AWS Bedrock
-boto3==1.34.0
+boto3>=1.28.0
 
 # Text processing
-unidecode==1.3.7
-
-# Date and time
-python-dateutil==2.8.2
+unidecode>=1.3.0
 
 # Production server
-gunicorn==21.2.0
+gunicorn>=20.1.0
 
 # File handling
-openpyxl==3.1.2
-
-# Security
-cryptography==41.0.7
+openpyxl>=3.0.0
 
 # Rate limiting
-Flask-Limiter==3.5.0
+Flask-Limiter>=3.0.0
 
 # Session management
-Flask-Session==0.5.0
+Flask-Session>=0.5.0
 
 # Form handling
-WTForms==3.1.0
-Flask-WTF==1.2.1
-
-# Timezone handling
-pytz==2023.3
-
-# Progress bars
-tqdm==4.66.1
+WTForms>=3.0.0
+Flask-WTF>=1.1.0
 
 # Performance monitoring
-psutil==5.9.6
+psutil>=5.9.0
