🔒 Security cleanup and system fixes
✅ Security improvements:
- All API keys moved to environment variables
- Hardcoded secrets replaced with placeholders
- IP addresses and domains sanitized
- Added comprehensive security scanning tools
- Created SECURITY.md documentation

✅ System fixes:
- Fixed Docker/Compose port alignment (5004)
- Updated fuzzywuzzy to rapidfuzz
- Fixed Product class compatibility
- Added rate limiting and CORS to webhook system
- Fixed Flask-Limiter configuration

✅ Testing improvements:
- Made test system port-configurable
- Added smoke test functionality
- All services now working on correct ports

🎯 All services operational:
- Main chatbot: localhost:5004 ✅
- Admin panel: localhost:5006 ✅
- Webhook system: localhost:5007 ✅
- Customer onboarding: localhost:5008 ✅

--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,33 @@ test_results.json
 *.temp
 temp/
 tmp/
+
+# Security - Never commit these
+*.key
+*.pem
+*.p12
+*.pfx
+*.crt
+*.cer
+*.der
+secrets/
+credentials/
+keys/
+*.bak
+*.backup
+*_backup.*
+*_secret.*
+*_key.*
+*_token.*
+*_password.*
+
+# AWS
+.aws/
+aws-credentials
+aws-config
+
+# API Keys and Tokens
+*api_key*
+*access_token*
+*secret_key*
+*private_key*
